[workspace]
resolver = "2"
members = ["babel42-core", "babel42"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
walkdir = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
petgraph = { version = "0.6", features = ["serde-1"] }
pest = "2"
pest_derive = "2"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-cpp = "0.23"
regex = "1"
