[package]
name = "babel42"
version = "0.1.0"
edition = "2021"
description = "ROS2 project analysis CLI (open source)"

[[bin]]
name = "babel42"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
babel42-core = { path = "../babel42-core" }
serde_json = { workspace = true }
