[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "ROS2 project analysis CLI (open source)"
license = "MIT"
repository = "https://github.com/elan8/babel42"

[[bin]]
name = "babel42"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
internals = { path = "../internals" }
serde_json = { workspace = true }
